--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
+    "react-typed": "^2.0.12",
     "tailwindcss": "3.3.2",
+    "typed.js": "^2.1.0",
     "typescript": "5.0.4"
   }
 }
